- Trimed Ancient and Scarab Gem Armors Now Show Trims
- Mammoth Now Grows In Stages
- Smilodon Now Grows In Stages
- Dodo Now Grows In Stages
- Jurassic Fern Now Tints To Biome Leaves Color
- Updated Nautilus Model To No Longer Float
- Updated JEI Plugin To New JEI System - Minimal Differences Client-Side
- Javelin Now Does 2 More Damage
- (Fabric) Fixed Server Crash
- Fixed Placing Stone Tables
- Fixed Cannibalism
- Fixed Bounding Boxes
- Fixed Frozen Meat's Attack Damage
- Fixed Bucket Pickup On Mod Cauldron
- Fixed Dilophosaurus's Venom Being White/Blue
- Fixed "animalsBreakBlocks" Config Option Not Working Properly
- Fixed Some Analyzer Recipes Having Multiple Outputs With The Same Item And Weight
- (Fabric) Fixed Composter Not Working For Lepidodendron Saplings and Lepidodendron Leaves
- Fixed Dodo Meat Not Analyzing To Dodo DNA
- Fixed Z-Fighting On Velocirator
- Added Updated Triceratops Model
- Added "Anu Totem" Stone Tablet
- Added Coat-Types; Data-Driven Cosmetics For Dinosaurs
- Added Gene Modification Table
- Added Data-Driven Models
- Added Data-Driven Animations
- Added Flowing Water To "#fossilslegacy:permafrost_freezable" Tag
- Added All Broken Javelins To "#fossilslegacy:repair_when_broken_in_archaeology_table" Tag
- Added All Swords To "#minecraft:swords" Tag
- Added All Pickaxes To "#minecraft:cluster_max_harvestables" Tag
- Added All Pickaxes To "#minecraft:pickaxes" Tag
- Added All Pickaxes To "#c:tools/mining_tool" Tag
- Added All Shovels To "#minecraft:shovels" Tag
- Added All Axes To "#minecraft:axes" Tag
- Added All Hoes To "#minecraft:hoes" Tag
- Added All Pickaxes, All Axes, All Shovels, And All Hoes To "#minecraft:enchantable/mining" Tag
- Added All Swords To "#minecraft:enchantable/fire_aspect" Tag
- Added All Swords To "#minecraft:enchantable/sword" Tag
- Added All Shovels and All Axes To "#minecraft:enchantable/sharp_weapon" Tag
- Added All Shovels and All Axes To "#minecraft:enchantable/weapon" Tag