@@ -1,2 +1,2 @@
-// 1.21.1	2024-10-07T21:57:55.2413189	Languages: en_us for mod: fossilslegacy
-1ffdcbf3b796300c0b993c9924fbc75bf43df490 assets/fossilslegacy/lang/en_us.json
+// 1.21.1	2024-10-08T08:09:44.0648365	Languages: en_us for mod: fossilslegacy
+2cf885fe1eff9fdc071c0432728e415bb61c3d0f assets/fossilslegacy/lang/en_us.json
