@@ -366,12 +366,12 @@
   "item.fossilslegacy.cryolophosaurus_dna": "Cryolophosaurus DNA",
   "item.fossilslegacy.cryolophosaurus_egg": "Cryolophosaurus Egg",
   "item.fossilslegacy.cryolophosaurus_spawn_egg": "Cryolophosaurus Spawn Egg",
-  "item.fossilslegacy.debug_baby": "Debug Item",
-  "item.fossilslegacy.debug_change_genetics": "Debug Item",
-  "item.fossilslegacy.debug_full_grown": "Debug Item",
-  "item.fossilslegacy.debug_max_health": "Debug Item",
-  "item.fossilslegacy.debug_max_hunger": "Debug Item",
-  "item.fossilslegacy.debug_tame": "Debug Item",
+  "item.fossilslegacy.debug_baby": "Debug Baby",
+  "item.fossilslegacy.debug_change_genetics": "Debug Change Genetics",
+  "item.fossilslegacy.debug_full_grown": "Debug Full Grown",
+  "item.fossilslegacy.debug_max_health": "Debug Max Health",
+  "item.fossilslegacy.debug_max_hunger": "Debug Max Hunder",
+  "item.fossilslegacy.debug_tame": "Debug Tame",
   "item.fossilslegacy.diamond_javelin": "Diamond Javelin",
   "item.fossilslegacy.dilophosaurus_dna": "Dilophosaurus DNA",
   "item.fossilslegacy.dilophosaurus_egg": "Dilophosaurus Egg",
